Added new resource types for snmp metrics
Added new resource types for snmp related metrics: host, host_disk,
host_network_interface.

Change-Id: I0be08864ee10cefa252dc89885fda5fcc89a4e8a
Closes-Bug: #1518338
Co-Authored-By: Sergio Colina <sergio@nubeliu.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -98,6 +98,9 @@ gnocchi.indexer.resources =
     ipmi = gnocchi.indexer.sqlalchemy_base:ResourceExt
     stack = gnocchi.indexer.sqlalchemy_base:ResourceExt
     image = gnocchi.indexer.sqlalchemy_extension:Image
+    host = gnocchi.indexer.sqlalchemy_extension:Host
+    host_disk = gnocchi.indexer.sqlalchemy_extension:HostDisk
+    host_network_interface = gnocchi.indexer.sqlalchemy_extension:HostNetworkInterface
 
 gnocchi.controller.schemas =
     generic = gnocchi.rest:GenericSchema
@@ -112,6 +115,9 @@ gnocchi.controller.schemas =
     ipmi = gnocchi.rest:GenericSchema
     stack = gnocchi.rest:GenericSchema
     image = gnocchi.rest:ImageSchema
+    host = gnocchi.rest:HostSchema
+    host_disk = gnocchi.rest:HostDiskSchema
+    host_network_interface = gnocchi.rest:HostNetworkInterfaceSchema
 
 gnocchi.storage =
     null = gnocchi.storage.null:NullStorage
