Use '#flake8: noqa' to skip file check
Better use '#flake8: noqa' to skip file check, rather than writing
a file path in tox.ini to exclude it.
refer to:
https://flake8.readthedocs.org/en/latest/

Change-Id: I2c0cba1bc8f12d868a091b6777e8c06df91435bf

--- a/tox.ini
+++ b/tox.ini
@@ -60,7 +60,7 @@ deps = {[testenv:docs]deps}
 commands = {toxinidir}/setup-test-env.sh {posargs}
 
 [flake8]
-exclude = .tox,.eggs,doc,gnocchi/indexer/alembic/versions/1c98ac614015_initial_base.py
+exclude = .tox,.eggs,doc
 show-source = true
 
 [testenv:genconfig]
