Fix dependency from tempest-lib to os-testr
We only need os-testr for subunit-trace

Change-Id: Id99348d5ce14d59b6693829e9c0c9dcaba70d18a

--- a/setup.cfg
+++ b/setup.cfg
@@ -64,7 +64,7 @@ test =
     mock
     oslotest
     python-subunit>=0.0.18
-    tempest-lib>=0.2.0
+    os-testr
     testrepository
     testscenarios
     testtools>=0.9.38
