rest: fix typo in metric list filtering for non-admin
Thanks Sylvain Afchain!

Change-Id: Icda5e64e5937aae95e822c4b3dfbf54228a1df6a

--- a/gnocchi/tests/gabbi/gabbits/metric.yaml
+++ b/gnocchi/tests/gabbi/gabbits/metric.yaml
@@ -203,6 +203,12 @@ tests:
             value: 43.1
       status: 404
 
+    - name: get metric list for authenticated user
+      request_headers:
+          x-user-id: foo
+          x-project-id: bar
+      url: /v1/metric
+
     - name: get metric list
       url: /v1/metric
       status: 200
