Don't encode exception message in ascii
Closes-bug: #1569749
Change-Id: I7698e4d73a41325fb34998166317b250afd7afd3
(cherry picked from commit 69f7819f1f9fb14abda94204cd97096ac66d8df6)

--- a/gnocchi/tests/gabbi/gabbits-live/live.yaml
+++ b/gnocchi/tests/gabbi/gabbits-live/live.yaml
@@ -56,6 +56,11 @@ tests:
       method: DELETE
       status: 204
 
+    - name: delete again unicode archive policy
+      url: /v1/archive_policy/%E2%9C%94%C3%A9%C3%B1%E2%98%83
+      method: DELETE
+      status: 404
+
     - name: post instance resource
       url: /v1/resource/instance
       method: post
