--- a/gnocchi/tests/gabbi/gabbits/archive.yaml
+++ b/gnocchi/tests/gabbi/gabbits/archive.yaml
@@ -319,6 +319,22 @@ tests:
       response_strings:
           - Archive policy grandiose does not exist
 
+    - name: delete archive utf8
+      url: /v1/archive_policy/%E2%9C%94%C3%A9%C3%B1%E2%98%83
+      method: DELETE
+      request_headers:
+        x-roles: admin
+      status: 204
+
+    - name: delete missing archive utf8 again
+      url: /v1/archive_policy/%E2%9C%94%C3%A9%C3%B1%E2%98%83
+      method: DELETE
+      request_headers:
+        x-roles: admin
+      status: 404
+      response_strings:
+          - Archive policy ✔éñ☃ does not exist
+
 # Add metric using the policy and then be unable to delete policy
 
     - name: create metric
