--- a/gnocchi/tests/gabbi/gabbits/resource_type.yaml
+++ b/gnocchi/tests/gabbi/gabbits/resource_type.yaml
@@ -324,6 +324,15 @@ tests:
       url: /v1/resource_type/my_custom_resource
       status: 404
 
+    - name: delete missing custom resource type utf8
+      url: /v1/resource_type/%E2%9C%94%C3%A9%C3%B1%E2%98%83
+      method: DELETE
+      request_headers:
+        x-roles: admin
+      status: 404
+      response_strings:
+          - Resource type ✔éñ☃ does not exist
+
 # Can we readd and delete the same resource type again
 
     - name: post resource type again
