rest: catch InvalidResourceAttributeName when creating resource type
Currently, if a user tries to use an invalid name for an attribute, the
server returns an error 500 because the exception is not caught.
Transform that to a 400 error.

Change-Id: I4cac55fe6b1c2c7c5004ab6002e61b04487facd4
(cherry picked from commit 95e702dbfc611c85bd08ed00a186bced4290f124)

--- a/gnocchi/tests/gabbi/gabbits/resource_type.yaml
+++ b/gnocchi/tests/gabbi/gabbits/resource_type.yaml
@@ -25,6 +25,19 @@ tests:
           content-type: application/json
       status: 403
 
+    - name: post resource type with existing name
+      url: /v1/resource_type
+      method: post
+      request_headers:
+          x-roles: admin
+          content-type: application/json
+      data:
+          name: my_custom_resource
+          attributes:
+              project_id:
+                  type: string
+      status: 400
+
     - name: post resource type bad string
       url: /v1/resource_type
       method: post
