--- a/gnocchi/tests/gabbi/gabbits/pagination.yaml
+++ b/gnocchi/tests/gabbi/gabbits/pagination.yaml
@@ -154,7 +154,7 @@ tests:
           $[1].id: 57a9e836-87b8-4a21-9e30-18a474b98fef
 
 #
-# Invalid limit/ordering
+# Invalid resource limit/ordering
 #
     - name: invalid sort_key
       GET: /v1/resource/generic?sort=invalid:asc
@@ -259,7 +259,7 @@ tests:
       data:
           ended_at: "2014-01-30T02:02:02.000000"
 
-    - name: update resource 5 bis
+    - name: update resource 5 again
       PATCH: $LAST_URL
       request_headers:
           x-user-id: 0fbb231484614b1a80131fc22f6afc9c
@@ -282,3 +282,254 @@ tests:
           $[1].ended_at: "2014-01-30T02:02:02+00:00"
           $[2].id: 1e3d5702-2cbf-46e0-ba13-0ddaa3c71150
           $[2].ended_at: null
+
+#
+# Create metrics
+#
+    - name: create archive policy
+      desc: for later use
+      url: /v1/archive_policy
+      method: POST
+      request_headers:
+          content-type: application/json
+          x-roles: admin
+      data:
+          name: dummy_policy
+          definition:
+              - granularity: 1 second
+      status: 201
+
+    - name: create metric with name1
+      url: /v1/metric
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      method: post
+      data:
+          name: "dummy1"
+          archive_policy_name: dummy_policy
+      status: 201
+
+    - name: create metric with name2
+      url: /v1/metric
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      method: post
+      data:
+          name: "dummy2"
+          archive_policy_name: dummy_policy
+      status: 201
+
+    - name: create metric with name3
+      url: /v1/metric
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      method: post
+      data:
+          name: "dummy3"
+          archive_policy_name: dummy_policy
+      status: 201
+
+    - name: create metric with name4
+      url: /v1/metric
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      method: post
+      data:
+          name: "dummy4"
+          archive_policy_name: dummy_policy
+      status: 201
+
+    - name: create metric with name5
+      url: /v1/metric
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      method: post
+      data:
+          name: "dummy5"
+          archive_policy_name: dummy_policy
+      status: 201
+
+    - name: list all default order
+      url: /v1/metric
+      method: get
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+
+    - name: list first two metrics default order
+      url: /v1/metric?limit=2
+      method: get
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      response_json_paths:
+          $.`len`: 2
+          $[0].name: $RESPONSE['$[0].name']
+          $[1].name: $RESPONSE['$[1].name']
+
+    - name: list all default order again
+      url: /v1/metric
+      method: get
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+
+    - name: list next three metrics default order
+      url: /v1/metric?limit=4&marker=$RESPONSE['$[1].id']
+      method: get
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      response_json_paths:
+          $.`len`: 3
+          $[0].name: $RESPONSE['$[2].name']
+          $[1].name: $RESPONSE['$[3].name']
+          $[2].name: $RESPONSE['$[4].name']
+
+    - name: list first two metrics order by user without direction
+      url: /v1/metric?limit=2&sort=name
+      method: get
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      status: 200
+      response_json_paths:
+          $.`len`: 2
+          $[0].name: dummy1
+          $[1].name: dummy2
+
+    - name: list first two metrics order by user
+      url: /v1/metric?limit=2&sort=name:asc
+      method: get
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      response_json_paths:
+          $.`len`: 2
+          $[0].name: dummy1
+          $[1].name: dummy2
+
+    - name: list next third metrics order by user
+      url: /v1/metric?limit=4&sort=name:asc&marker=$RESPONSE['$[1].id']
+      method: get
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      response_json_paths:
+          $.`len`: 3
+          $[0].name: dummy3
+          $[1].name: dummy4
+          $[2].name: dummy5
+
+#
+# Default metric limit
+#
+
+    - name: create metric with name6
+      url: /v1/metric
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      method: post
+      data:
+          archive_policy_name: dummy_policy
+      status: 201
+
+    - name: create metric with name7
+      url: /v1/metric
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      method: post
+      data:
+          archive_policy_name: dummy_policy
+      status: 201
+
+    - name: create metric with name8
+      url: /v1/metric
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      method: post
+      data:
+          archive_policy_name: dummy_policy
+      status: 201
+
+    - name: default metric limit
+      url: /v1/metric
+      method: get
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      response_json_paths:
+          $.`len`: 7
+
+#
+# Invalid metrics limit/ordering
+#
+
+    - name: metric invalid sort_key
+      url: /v1/metric?sort=invalid:asc
+      method: get
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      status: 400
+
+    - name: metric invalid sort_dir
+      url: /v1/metric?sort=id:invalid
+      method: get
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      status: 400
+
+    - name: metric invalid marker
+      url: /v1/metric?marker=d44b3f4c-27bc-4ace-b81c-2a8e60026874
+      method: get
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      status: 400
+
+    - name: metric invalid negative limit
+      url: /v1/metric?limit=-2
+      method: get
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      status: 400
+
+    - name: metric invalid limit
+      url: /v1/metric?limit=invalid
+      method: get
+      request_headers:
+          x-user-id: 0fbb231484614b1a80131fc22f6afc9c
+          x-project-id: f3d41b770cc14f0bb94a1d5be9c0e3ea
+          content-type: application/json
+      status: 400
