raise NoSuchMetric when deleting metric already marked deleted
we should hide the fact the metric is marked for deletion but not
yet deleted.

Change-Id: Ib4a5d581208abed7978c53c169ce3ae0cc5d4ece
Closes-Bug: #1584139

--- a/gnocchi/tests/gabbi/gabbits/metric.yaml
+++ b/gnocchi/tests/gabbi/gabbits/metric.yaml
@@ -278,6 +278,10 @@ tests:
       method: DELETE
       status: 204
 
+    - name: delete metric again
+      DELETE: $LAST_URL
+      status: 404
+
     - name: delete non existent metric
       url: /v1/metric/foo
       method: DELETE
